[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gmxplot"
version = "0.1.0"
description = "GROMACS XVG file visualization tool with auto type detection, comparison, and statistical summary"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Joe Hoye Dow", email = "luxunisgod123@gmail.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.scripts]
gmxplot = "gmxplot.cli:app"

[tool.setuptools]
packages = ["gmxplot"]

[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312']

